feat!: minio provider add s3 store + config

--- a/modules/credentials-provider-minio/pom.xml
+++ b/modules/credentials-provider-minio/pom.xml
@@ -30,6 +30,11 @@
             <version>${revision}</version>
         </dependency>
         <dependency>
+            <groupId>it.smartcommunitylabdhub</groupId>
+            <artifactId>dh-files</artifactId>
+            <version>${revision}</version>
+        </dependency>        
+        <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
             <version>${minio.version}</version>
