fix: use AWS_DEFAULT_REGION in place of non standard S3_REGION

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -275,7 +275,7 @@ credentials:
       endpoint: ${S3_ENDPOINT_URL:}
       bucket: ${S3_BUCKET:}
       signature-version: s3v4
-      region: ${S3_REGION:}
+      region: ${AWS_DEFAULT_REGION:}
       access-key: ${AWS_ACCESS_KEY:}
       secret-key: ${AWS_SECRET_KEY:}  
       path-style-access: ${S3_PATH_STYLE_ACCESS:}    
