feat: trigger lifecycle

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>modules/framework-argo</module>
         <module>modules/framework-kaniko</module>
         <module>modules/trigger-scheduler</module>
+        <module>modules/trigger-lifecycle</module>
         <module>modules/runtime-container</module>
         <module>modules/runtime-dbt</module>
         <module>modules/runtime-kfp</module>
