feat: trigger lifecycle event execution

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -303,3 +303,9 @@ credentials:
 # Templates
 templates:
   path: ${TEMPLATES_PATH:classpath:/templates}
+
+
+# Triggers
+triggers:
+  lifecycle:
+    store: memory
