--- a/application/pom.xml
+++ b/application/pom.xml
@@ -222,6 +222,13 @@
             <version>${lucene.version}</version>
         </dependency>
 
+        <!-- TEMPLATING -->
+        <dependency>
+            <groupId>com.github.spullara.mustache.java</groupId>
+            <artifactId>compiler</artifactId>
+            <version>0.9.10</version>
+          </dependency>
+
         <!-- DH MODULES -->
         <dependency>
             <groupId>it.smartcommunitylabdhub</groupId>
