--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "prettier": "prettier --config ./.prettierrc.yml --write --list-different \"modules/*/src/**/*.java\"  \"application/src/**/*.java\"",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1 --skip-unstable"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 1 --skip-unstable",
+    "envvars": "cat application/src/main/resources/application.yml  | grep '${' | awk -F ':' '{print $2}' | awk -F '{' '{print $2}' |  grep '^[[:upper:]]' | sort -u > ENV_VARS.txt"
   },
   "devDependencies": {
     "conventional-changelog-cli": "^5.0.0",
