feat: define new logger LOG_LEVEL_K8S to debug k8s

--- a/application/src/main/resources/application.yml
+++ b/application/src/main/resources/application.yml
@@ -185,6 +185,7 @@ logging:
    level:
       ROOT: INFO
       it.smartcommunitylabdhub: ${LOG_LEVEL:INFO}
+      it.smartcommunitylabdhub.framework.k8s: ${LOG_LEVEL_K8S:INFO}
 
 security:
   api:
